[gd_scene load_steps=12 format=3 uid="uid://b3tenrcjl2ylt"]

[ext_resource type="Script" uid="uid://55a6merh5k1s" path="res://freezables/damage_saw/damage_saw.gd" id="1_mv1vq"]
[ext_resource type="Texture2D" uid="uid://chg4i00fn0622" path="res://assets/sawblade.png" id="2_7us3r"]
[ext_resource type="PackedScene" uid="uid://du2n7hnfpoyuw" path="res://freezables/freezable_component.tscn" id="3_7us3r"]
[ext_resource type="PackedScene" uid="uid://c0t0qds41kbg6" path="res://freezables/frozen_visual_component.tscn" id="4_e3p66"]
[ext_resource type="PackedScene" uid="uid://xa8ntkiwaptg" path="res://utils/vos_enable_and_disappear.tscn" id="5_u4lo1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e3p66"]
atlas = ExtResource("2_7us3r")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4lo1"]
atlas = ExtResource("2_7us3r")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_56lsb"]
atlas = ExtResource("2_7us3r")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kr2ir"]
atlas = ExtResource("2_7us3r")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wrblr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3p66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4lo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56lsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kr2ir")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mv1vq"]
radius = 8.06226

[node name="DamageSaw" type="PathFollow2D"]
script = ExtResource("1_mv1vq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wrblr")
frame_progress = 0.511849

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_mv1vq")

[node name="FreezableComponent" parent="." instance=ExtResource("3_7us3r")]
only_active_when_visible = true

[node name="FrozenVisualComponent" parent="FreezableComponent" node_paths=PackedStringArray("visual") instance=ExtResource("4_e3p66")]
visual = NodePath("../../AnimatedSprite2D")

[node name="VOSEnableAndDisappear" parent="." instance=ExtResource("5_u4lo1")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="on_freeze_toggle" from="FreezableComponent" to="." method="_on_freezable_component_on_freeze_toggle"]
[connection signal="setup_finished" from="FreezableComponent/FrozenVisualComponent" to="." method="_on_frozen_visual_component_setup_finished"]
